--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "embla-carousel-react": "^8.0.0",
     "geist": "^1.2.2",
     "next": "14.1.0",
     "react": "^18",
