--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,10 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "allowUnreachableCode": false,
+    "noImplicitReturns": true,
     "plugins": [
       {
         "name": "next"
